--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ scala:
 before_install:
   - docker run --rm -d -p "27017:27017" --name mongo mongo:3.2
 script:
-  - ./sbt test "+ publish"
+  - ./sbt clean test "+ publish with-defaults"
 
 after_success:
   - docker rm -f mongo
@@ -21,7 +21,6 @@ cache:
   - "$HOME/.ivy2"
   - "$HOME/.sbt"
 
-# blacklist
 branches:
-  except:
-    - RELEASE
+  only:
+    - master
