--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,6 +1,12 @@
 mongo {
-  url = "mongodb://localhost:27017"
-  url = ${?MONGO_URL}
+
+  url {
+    host = "localhost"
+    url = ${?MONGO_HOST}
+
+    port = "27017"
+    port = ${?MONGO_PORT}
+  }
 
   database = "sdkman"
   database = ${?MONGO_DATABASE}
