Use testcontainers for testing

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -2,7 +2,7 @@ mongo {
 
   url {
     host = "localhost"
-    url = ${?MONGO_HOST}
+    host = ${?MONGO_HOST}
 
     port = "27017"
     port = ${?MONGO_PORT}
